--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
   </head>
   <body>
 
+    <% if user_signed_in? %>
+    You are signed in as <%= current_user.email %>.
+    <%= link_to "Log out", destroy_user_session_path, :method => :delete %>
+    <% else %>
+    <%= link_to "Log in", new_user_session_path %>
+    <% end %>
+
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
