--- a/app/views/numbers/show.html.erb
+++ b/app/views/numbers/show.html.erb
@@ -1,2 +1,24 @@
-<h1>Numbers#show</h1>
-<p>Find me in app/views/numbers/show.html.erb</p>
+<h1>Your lucky numbers are:</h1>
+
+<table border="1" cellspacing="5" cellpadding="10">
+  <tr>
+    <td>
+      <span id="number1"><%= @numbers[0] %></span>
+    </td>
+    <td>
+      <span id="number2"><%= @numbers[1] %></span>
+    </td>
+    <td>
+      <span id="number3"><%= @numbers[2] %></span>
+    </td>
+    <td>
+      <span id="number4"><%= @numbers[3] %></span>
+    </td>
+    <td>
+      <span id="number5"><%= @numbers[4] %></span>
+    </td>
+    <td>
+      <span id="number6"><%= @numbers[5] %></span>
+    </td>
+  </tr>
+</table>
